--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -1027,7 +1027,7 @@ div.blockquote,
 [id*="u-credit"] a[href="#u-credit-otherwise"] {
 	position: relative;
 	width: 50%;
-	min-width: 5rem;
+	min-width: 5em;
 	height: 2em;
 	margin: 1em auto;
 	padding: 0.25em;
@@ -2054,7 +2054,7 @@ body.print-body #print-options a:any-link {
 	position: relative;
 	z-index: 2;
 	justify-content: center;
-	min-width: 5rem;
+	min-width: 5em;
 	margin: 0;
 	padding: 0.25rem;
 	overflow: hidden;
