--- a/src/css/structure.css
+++ b/src/css/structure.css
@@ -391,7 +391,7 @@ input.text::-webkit-scrollbar-thumb {
 	position: relative;
 	z-index: 2;
 	justify-content: center;
-	min-width: 5rem;
+	min-width: 5em;
 	margin: 0;
 	padding: 0.25rem;
 	overflow: hidden;
